objects/ssot__ConvChnlEngmtSummaryPtcp__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CommentsText__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConvChnlEngmtSummaryId__c</fullName>
        <label>Conv Chnl Engmt Summary</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Conv Chnl Engmt Summary Ptcp Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantId__c</fullName>
        <label>Participant</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantObject__c</fullName>
        <label>Participant Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantRoleText__c</fullName>
        <label>Participant Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1743741892357_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConvChnlEngmtSummaryPtcp_Participant_rel</label>
        <referenceTo>ssot__UserGroup__dlm</referenceTo>
        <relationshipLabel>ConvChnlEngmtSummaryPtcp_Participant_rel</relationshipLabel>
        <relationshipName>rel_1743741892357_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1743741895466_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConvChnlEngmtSummaryPtcp_Participant_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ConvChnlEngmtSummaryPtcp_Participant_rel</relationshipLabel>
        <relationshipName>rel_1743741895466_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1743741898474_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConvChnlEngmtSummaryPtcp_Participant_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>ConvChnlEngmtSummaryPtcp_Participant_rel</relationshipLabel>
        <relationshipName>rel_1743741898474_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>